--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -11,5 +11,6 @@
     <div class="root">
         <h1>Welcome To Home Page</h1>
     </div>
+    <script src="./js/index.js"></script>
 </body>
 </html>
