serving img from server

--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="root">
         <h1>Welcome To Home Page</h1>
+        <img class="img-resize" src="./assests/img/Profile-removebg-preview.png" />
     </div>
     <script src="./js/index.js"></script>
 </body>
